<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="353dp"
        android:layout_height="47dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="29dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="134dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="135dp"
        android:text="@string/walltaker_id_instruction_text"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="10dp"
        android:labelFor="@id/editTextTextLinkID"
        android:text="@string/walltaker_url_base"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextLinkID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editTextTextLinkID"
        android:layout_width="103dp"
        android:layout_height="54dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="39dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="text"
        android:text="@string/walltaker_id_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/buttonUpdate"
        android:layout_width="294dp"
        android:layout_height="52dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="59dp"
        android:text="@string/updateButtonLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextLinkID" />

    <ImageView
        android:id="@+id/previewImageView"
        android:layout_width="262dp"
        android:layout_height="341dp"
        android:layout_marginStart="74dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="75dp"
        android:contentDescription="@string/image_preview_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSetByMsg"
        app:srcCompat="@android:drawable/screen_background_dark_transparent" />

    <Button
        android:id="@+id/buttonRefresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="59dp"
        android:onClick="refresh"
        android:text="Refresh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonStop"
        app:layout_constraintTop_toBottomOf="@+id/buttonUpdate" />

    <TextView
        android:id="@+id/textViewSetByMsg"
        android:layout_width="353dp"
        android:layout_height="23dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="29dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRefresh" />

    <Button
        android:id="@+id/buttonStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:layout_marginTop="7dp"
        android:onClick="onClickBtnStop"
        android:text="Stop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonUpdate" />

</androidx.constraintlayout.widget.ConstraintLayout>